Fix horizontal scroll problem

--- a/src/style.css
+++ b/src/style.css
@@ -5,8 +5,9 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-weight: 300;
+  font-weight: 100;
   font-family: 'Geist Variable' !important;
+  font-size: 10pt;
 }
 
 body {
